change image name

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -83,7 +83,8 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/{{ env.IMAGE_NAME }}
+          images: ghcr.io/vadym11/devopsproject2025
+#          images: ${{ env.REGISTRY }}/{{ env.IMAGE_NAME }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
