--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 asgiref==3.8.1
 Django==5.2.3
+django-extensions==4.1
 djangorestframework==3.16.0
 environs==14.2.0
 iniconfig==2.1.0
 marshmallow==4.0.0
 packaging==25.0
 pluggy==1.6.0
-psycopg==3.2.9
-psycopg2==2.9.10
 psycopg2-binary==2.9.10
 Pygments==2.19.2
 pytest==8.4.1
