--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -52,6 +52,7 @@ jobs:
       - uses: ./.github/actions/install-dependencies
 
       - name: Run django migrate
+        # this checks exit status: of it is 0 - migrations successful
         run: python manage.py makemigrations --check
 
   build-docker-image:
@@ -84,6 +85,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/vadym11/devopsproject2025
+          # find how to set env and secrets from video
 #          images: ${{ env.REGISTRY }}/{{ env.IMAGE_NAME }} skipped for now
 
       - name: Build and push
