--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,8 +54,8 @@ jobs:
     if: github.ref == 'refs/heads/main'
     outputs:
       # chore don't generate release
-      new-release-published: ${{ steps.semantic.outputs,new_release_published }}
-      new-release-version: ${{ steps.semantic.outputs,new_release_version }}
+      new-release-published: ${{ steps.semantic.outputs.new_release_published }}
+      new-release-version: ${{ steps.semantic.outputs.new_release_version }}
     permissions:
       contents: write
       issues: write
