feat: add new test endpoint

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -122,4 +122,25 @@ jobs:
           push: true
           labels: ${{ steps.meta.outputs.labels }}
 
+  deploy-application:
+    runs-on: ubuntu-latest
+    needs:
+      - semantic-release
+      - build-docker-image
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkou@tv4
+
+      - name: Update Image version in values.yaml
+        uses: fjogeleit/yaml-update-action@main
+        with:
+          valueFile: 'envs/prod/values.yaml' # path to the values file to be changed
+          propertyPath: 'image.tag' # the value to update
+          value: ${{ needs.semantic-release.outputs.new-release-version }} # new value to override, taken from semantic-release step
+          branch: main # which branch to push change to
+          commitChange: true
+          message: "chore: Deploy Image Version ${{ needs.semantic-release.outputs.new-release-version }} to production [skip ci]"
+
 #  docker build -t ghcr.io/vadym11/devopsproject2025
